--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="manifest" href="/manifest.json">
+        <link rel="manifest" href="manifest.json">
         <meta charset="utf-8">
+        <meta name="theme-color" content="#ff0000">
         <title></title>
     </head>
     <body>
-        <h1>Web Application Manifest Sample</h1>    
+        <h1>Web Application Manifest Sample</h1>
     </body>
 </html>
